# knowledge_base_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  Procfile  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 3c1ba8bea33e_add_summary_to_article.py  599ffdab7a12_add_tags_to_articles.py  9b307517fdc5_add_comment_and_comment_reply_model.py  a8e67b00b343_add_embedding_column.py  c925b882dd7e_initial_migration.py  d98c5b102dd1_add_chat_model.py
api/: articles.py  auth.py  chat.py  comments.py  users.py  views.py
core/: deps.py  security.py
db/: session.py
models/: article.py  chat.py  comment.py  tag.py  user.py
repositories/: article.py  chat.py  comment.py  session.py  user.py
schemas/: article.py  chat.py  comment.py  session.py  tag.py  user.py
services/: article.py  chat.py  comment.py  embedding.py  search.py  session.py  user.py
templates/: articles.html  base.html  chat.html  login.html  signup.html
tests/: conftest.py  test_articles.py  test_auth.py  test_chat.py
